src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Customer_Account__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_Account__c</fullName>
        <formula>Customer_Account__r.Name</formula>
        <label>Number Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parties__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parties</label>
        <referenceTo>Parties__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>